adding prime ng

--- a/src/app/Home/home.component.html
+++ b/src/app/Home/home.component.html
@@ -1,9 +1,8 @@
 <div class="p-grid">
-    <div class="p-col-6 p-offset-3">6</div>
-</div>
-<div class="p-grid">
-    <div class="p-col-12 p-md-6 p-lg-3">A</div>
-    <div class="p-col-12 p-md-6 p-lg-3">B</div>
-    <div class="p-col-12 p-md-6 p-lg-3">C</div>
-    <div class="p-col-12 p-md-6 p-lg-3">D</div>
+  <div class="p-col-5 p-offset-3">
+     <input type="text" class="inputselection" placeholder="Search">
+  </div>
+  <div class="p-col-2">
+      <button pButton type="button" label="Search" class="p-button-outlined"></button>
+  </div>
 </div>
