--- a/src/app/Home/home.component.css
+++ b/src/app/Home/home.component.css
@@ -1,9 +1,9 @@
-.example-form {
-    min-width: 150px;
-    max-width: 500px;
-    width: 100%;
-  }
-  
-  .example-full-width {
-    width: 100%;
-  }
+.inputselection {
+  border: 0;
+  outline: 0;
+  width: 100%;
+  border-bottom: 2px solid blue;
+  text-align: center;
+  opacity: 1;
+  font-size: 1.4rem;
+}
